# CodinGameWinter2026

./: CMakeLists.txt  README.md  bot.cpp
